[gd_scene load_steps=5 format=3 uid="uid://bfeuhvrwkbjhk"]

[ext_resource type="Script" path="res://Tutorial.gd" id="1_5sb03"]
[ext_resource type="Theme" uid="uid://dknsnl6jjjfyg" path="res://button_win.tres" id="1_un2pt"]
[ext_resource type="Script" path="res://HexGridTutorial.gd" id="3_6ad3q"]
[ext_resource type="AudioStream" uid="uid://7ipt017lgj2r" path="res://assets/sounds/tutorial.mp3" id="4_0e7lq"]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_5sb03")

[node name="Background" type="ColorRect" parent="."]
offset_right = 813.0
offset_bottom = 1445.0
color = Color(0, 0, 0, 0.501961)

[node name="Panel" type="Panel" parent="."]
offset_right = 813.0
offset_bottom = 1445.0

[node name="Intro" type="RichTextLabel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 336.0
offset_right = 762.0
offset_bottom = 1084.0
theme_override_colors/default_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_font_sizes/normal_font_size = 39
text = "Ваше расследование принимает неожиданный оборот, когда вы обнаруживаете, что единственная улика ведет к старому полю битвы, теперь минному полю, о котором город забыл как о страшном сне.

С колотящимся в груди сердцем вы должны ступать осторожно. Один неверный шаг, и секреты этого дела могут быть похоронены... вместе с вами"

[node name="Button1" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 151.0
offset_top = 1270.0
offset_right = 651.0
offset_bottom = 1380.0
theme = ExtResource("1_un2pt")
text = "глубокий вдох..."

[node name="Tutorial" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 52.0
offset_right = 766.0
offset_bottom = 1269.0
theme_override_font_sizes/normal_font_size = 30
text = "Сейчас вы стоите на краю минного поля. Ключ к разгадке убийства лежит на другой стороне.

Нажмите на шестиугольную клетку, чтобы узнать, что находится под ней. Но будьте внимательны, если это мина, игра окончена.

Цифры на ячейке указывают, сколько мин находится рядом с ней. Используйте эту информацию, чтобы проложить свой путь.

Длинное нажатие на клетку, установает флаг в том месте, где, по вашему мнению, спрятана мина.

Очистите минное поле или отметьте все мины, чтобы добраться до подсказки.

Удачи, детектив. Правда ждет тех, кто отважен!"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 151.0
offset_top = 1270.0
offset_right = 651.0
offset_bottom = 1380.0
theme = ExtResource("1_un2pt")
text = "ступить за изгородь"

[node name="HexGrid" type="Node2D" parent="."]
position = Vector2(71, 1020)
script = ExtResource("3_6ad3q")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0e7lq")
volume_db = -12.0

[connection signal="button_up" from="Panel/Button1" to="." method="_on_button_1_button_up"]
[connection signal="button_up" from="Panel/Button2" to="." method="_on_button_2_button_up"]
